<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Golf Card</string>
    <string name="action_settings">Settings</string>
    <string name="btnIn">In</string>
    <string name="btnTally">Tally</string>
    <string name="btnClear">Clear</string>
    <string name="lblHole1">1</string>
    <string name="lblHole2">2</string>
    <string name="lblHole3">3</string>
    <string name="lblHole4">4</string>
    <string name="lblHole5">5</string>
    <string name="lblHole6">6</string>
    <string name="lblHole7">7</string>
    <string name="lblHole8">8</string>
    <string name="lblHole9">9</string>
    <string name="lblPar1">3</string>
    <string name="lblPar2">4</string>
    <string name="lblPar3">4</string>
    <string name="lblPar4">3</string>
    <string name="lblPar5">5</string>
    <string name="lblPar6">3</string>
    <string name="lblPar7">3</string>
    <string name="lblPar8">5</string>
    <string name="lblPar9">4</string>
    <string name="lblScore">Score</string>
    <string name="lblPar">Par</string>
    <string name="lblHole">Hole</string>
    <string name="txtName">Player :</string>
    <string name="lblRoundScore">Round Score</string>
    <string name="lblHoleAvg">Hole Average</string>

</resources>
