<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ScoreActivity"
    android:background="@drawable/golf_backdrop">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/txtName"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblHole"
        android:layout_below="@+id/txtName"
        android:layout_alignParentStart="true"
        android:text="@string/lblHole"
        android:inputType="none"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblPar"
        android:layout_below="@+id/txtName"
        android:layout_toEndOf="@+id/lblHole"
        android:text="@string/lblPar"
        android:inputType="none"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblScore"
        android:layout_below="@+id/txtName"
        android:layout_toEndOf="@+id/lblPar"
        android:text="@string/lblScore"
        android:inputType="none"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/lblHole1"
        android:layout_below="@+id/lblHole"
        android:text="@string/lblHole1"
        android:layout_alignEnd="@+id/lblHole"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="#ff000000"
        android:enabled="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/lblPar1"
        android:layout_below="@+id/lblPar"
        android:text="@string/lblPar1"
        android:layout_alignStart="@+id/lblPar"
        android:layout_alignEnd="@+id/lblPar"
        android:textColor="#ff000000"
        android:gravity="center"
        android:enabled="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore1"
        android:layout_below="@+id/lblScore"
        android:layout_alignStart="@+id/lblScore"
        android:layout_alignEnd="@+id/lblScore"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnIn"
        android:id="@+id/btnIn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTally"
        android:id="@+id/btnTally"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblHole2"
        android:layout_below="@+id/lblHole1"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblHole1"
        android:text="@string/lblHole2"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblHole3"
        android:layout_below="@+id/lblHole2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblHole2"
        android:text="@string/lblHole3"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblHole4"
        android:layout_below="@+id/lblHole3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblHole3"
        android:text="@string/lblHole4"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblHole5"
        android:layout_below="@+id/lblHole4"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblHole4"
        android:text="@string/lblHole5"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblHole6"
        android:layout_below="@+id/lblHole5"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblHole5"
        android:text="@string/lblHole6"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblHole7"
        android:layout_below="@+id/lblHole6"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblHole6"
        android:text="@string/lblHole7"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblHole8"
        android:layout_below="@+id/lblHole7"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblHole7"
        android:text="@string/lblHole8"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblHole9"
        android:layout_below="@+id/lblHole8"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblHole8"
        android:text="@string/lblHole9"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblPar2"
        android:layout_below="@+id/lblPar1"
        android:layout_alignStart="@+id/lblPar1"
        android:layout_toStartOf="@+id/btnIn"
        android:layout_alignEnd="@+id/lblPar1"
        android:text="@string/lblPar2"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblPar3"
        android:layout_below="@+id/lblPar2"
        android:layout_alignStart="@+id/lblPar2"
        android:layout_alignEnd="@+id/lblPar2"
        android:text="@string/lblPar3"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblPar4"
        android:layout_below="@+id/lblPar3"
        android:layout_alignStart="@+id/lblPar3"
        android:layout_alignEnd="@+id/lblPar3"
        android:text="@string/lblPar4"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblPar5"
        android:layout_below="@+id/lblPar4"
        android:layout_alignStart="@+id/lblPar4"
        android:layout_alignEnd="@+id/lblPar4"
        android:text="@string/lblPar5"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblPar6"
        android:layout_below="@+id/lblPar5"
        android:layout_alignStart="@+id/lblPar5"
        android:layout_alignEnd="@+id/lblPar5"
        android:text="@string/lblPar6"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblPar7"
        android:layout_below="@+id/lblPar6"
        android:layout_alignStart="@+id/lblPar6"
        android:layout_alignEnd="@+id/lblPar6"
        android:text="@string/lblPar7"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblPar8"
        android:layout_below="@+id/lblPar7"
        android:layout_alignStart="@+id/lblPar7"
        android:layout_alignEnd="@+id/lblPar7"
        android:text="@string/lblPar8"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/lblPar9"
        android:layout_below="@+id/lblPar8"
        android:layout_alignStart="@+id/lblPar8"
        android:layout_alignEnd="@+id/lblPar8"
        android:text="@string/lblPar9"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore2"
        android:layout_below="@+id/txtScore1"
        android:layout_toEndOf="@+id/lblPar2"
        android:layout_alignEnd="@+id/txtScore1"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore3"
        android:layout_below="@+id/txtScore2"
        android:layout_toEndOf="@+id/lblPar3"
        android:layout_alignEnd="@+id/txtScore2"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore4"
        android:layout_below="@+id/txtScore3"
        android:layout_toEndOf="@+id/lblPar4"
        android:layout_alignEnd="@+id/txtScore3"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore5"
        android:layout_below="@+id/txtScore4"
        android:layout_toEndOf="@+id/lblPar5"
        android:layout_alignEnd="@+id/txtScore4"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore6"
        android:layout_below="@+id/txtScore5"
        android:layout_toEndOf="@+id/lblPar6"
        android:layout_alignEnd="@+id/txtScore5"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore7"
        android:layout_below="@+id/txtScore6"
        android:layout_toEndOf="@+id/lblPar7"
        android:layout_alignEnd="@+id/txtScore6"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore8"
        android:layout_below="@+id/txtScore7"
        android:layout_toEndOf="@+id/lblPar8"
        android:layout_alignEnd="@+id/txtScore7"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtScore9"
        android:layout_below="@+id/txtScore8"
        android:layout_toEndOf="@+id/lblPar9"
        android:layout_alignEnd="@+id/txtScore8"
        android:gravity="center" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClear"
        android:id="@+id/btnClear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblRoundScore"
        android:layout_below="@+id/txtScore1"
        android:layout_alignParentEnd="true"
        android:text="@string/lblRoundScore"
        android:visibility="invisible"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtRoundScore"
        android:layout_below="@+id/lblRoundScore"
        android:layout_alignStart="@+id/lblRoundScore"
        android:visibility="invisible"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblHoleAvg"
        android:text="@string/lblHoleAvg"
        android:layout_below="@+id/txtScore4"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:visibility="invisible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtHoleAvg"
        android:layout_below="@+id/lblHoleAvg"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/lblHoleAvg"
        android:gravity="center"
        android:visibility="invisible" />

</RelativeLayout>
